add INDEX PLAYER ABOUT-US pages

--- a/cloud/views/common/header.jade
+++ b/cloud/views/common/header.jade
@@ -1,2 +1,9 @@
 header
-  p header
+  nav
+    ul
+      li
+        a(href='/') HOMEPAGE
+      li
+        a(href='/player') PLAYER
+      li
+        a(href='/about') ABOUT US
