--- a/cloud/views/player/index.jade
+++ b/cloud/views/player/index.jade
@@ -1,10 +1,10 @@
 extends ../layout
 
 block title
-  title Akapollo Player
+  title AKAPOLLO - PLAYER
 
 block body
-  main#main
+  main#player
 
 block bottom
   script(
