--- a/lib/styl/common.styl
+++ b/lib/styl/common.styl
@@ -1,6 +1,5 @@
-@import 'nib'
-@import 'tools/reset'
-@import 'tools/var'
-@import 'tools/base'
+@import 'tools/_variables'
+@import 'tools/_reset'
+
 @import 'common/header'
 @import 'common/footer'
