--- a/lib/styl/common/header.styl
+++ b/lib/styl/common/header.styl
@@ -1,24 +1,14 @@
 header
   fixed: top left right
   z-index 1001
-  background-color $header-background
+  color $HEADER-COLOR
+  gradient: $HEADER-BGCOLOR-TOP $HEADER-BGCOLOR-BOTTOM
 
   nav
-    margin 0
-    padding 0
+    margin 10px auto
+    text-align center
 
     ul
-      clearfix()
-      display block
-      margin 10px 0
-      list-style none
-
-    li
-      float left
-      margin 0 10px
-
-    a
-      text-decoration none
-
-  p
-    text-align center
+      li
+        display inline-block
+        padding 0 20px
