add function of upload

--- a/cloud/views/admin/partials/header.jade
+++ b/cloud/views/admin/partials/header.jade
@@ -1,2 +1,9 @@
 header
-  p AKAPOLLO ADMIN
+  nav
+    ul
+      li
+        a(href='/admin') Dashboard
+      li
+        a(href='/admin/upload') Upload
+      li
+        a(href='/logout') Logout
