--- a/cloud/views/client/base.jade
+++ b/cloud/views/client/base.jade
@@ -1,5 +1,10 @@
 extends ../layout
 
+block global-head
+  link(
+  rel='stylesheet'
+  href='/css/client.css')
+
 block header
   include partials/header
 
