--- a/client/static/styl/tools/_variables.styl
+++ b/client/static/styl/tools/_variables.styl
@@ -1,18 +1,10 @@
-// Font
-$FONT-FAMILY = "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei";
-
-// Body Background Color
-$BODY-BGCOLOR-TOP = #333
-$BODY-BGCOLOR-BOTTOM = #111
-
-// Link
-$LINK-COLOR = #c3c3c3
-$LINK-HOVER = #fff
-
-// Header
-$HEADER-COLOR = #cacaca
-$HEADER-BGCOLOR-TOP = rgba(255, 255, 255, 0.5)
-$HEADER-BGCOLOR-BOTTOM = rgba(255, 255, 255, 0.1)
-
-// Footer
-$FOOTER-COLOR = #cacaca
+$GLOBAL-BGCOLOR = #222
+$GLOBAL-FONTCOLOR = #ddd
+$GLOBAL-FONTFAMILY = "Raleway", "Arial", sans-serif
+$GLOBAL-LINKCOLOR = #ccc
+$GLOBAL-HOVERCOLOR = #222
+$GLOBAL-HOVERBGCOLOR = #ccc
+$GLOBAL-BUTTON-BDCOLOR = #ccc
+$GLOBAL-BUTTON-BGCOLOR = #ccc
+$GLOBAL-BUTTON-LINKCOLOR = #ccc
+$GLOBAL-BUTTON-HOVERCOLOR = #222
