--- a/cloud/views/admin/login.jade
+++ b/cloud/views/admin/login.jade
@@ -23,7 +23,7 @@ block body
         label
           span 密码
           input(
-            type='input'
+            type='password'
             name='password')
       input(
         type='submit'
