--- a/cloud/views/layout.jade
+++ b/cloud/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     include include/meta
+    block meta
     block title
     include include/head
     block global-head
