--- a/client/static/styl/tools/_base.styl
+++ b/client/static/styl/tools/_base.styl
@@ -1,5 +1,5 @@
 html
-  font-size 62.5%
+  fs: (16/16)rem
 
 html, body
   height 100%
@@ -9,7 +9,7 @@ body
   background $GLOBAL-BGCOLOR
   color $GLOBAL-FONTCOLOR
   font-family $GLOBAL-FONTFAMILY
-  font-size 1.6rem
+  fs: (16/16)rem
   line-height 1.618
 
 a, button
@@ -29,7 +29,7 @@ button
   margin 0
   padding .5rem
   background none
-  border 1rem solid $GLOBAL-BUTTON-BDCOLOR
+  border .5rem solid $GLOBAL-BUTTON-BDCOLOR
   border-radius: .5rem
   color $GLOBAL-BUTTON-LINKCOLOR
   font-family $GLOBAL-FONTFAMILY
