--- a/cloud/views/client/partials/bottom.jade
+++ b/cloud/views/client/partials/bottom.jade
@@ -7,3 +7,5 @@
 //-   jQuery.getScript('//cdn.bootcss.com/lodash.js/3.5.0/lodash.min.js', function() {
 //-     console.log('lodash is loaded');
 //-   });
+script(src='//cdn.bootcss.com/jquery/2.1.3/jquery.min.js')
+script(src='//cdn.bootcss.com/lodash.js/3.5.0/lodash.min.js')
