--- a/client/static/styl/tools/_font.styl
+++ b/client/static/styl/tools/_font.styl
@@ -1,20 +1,40 @@
-$Raleway = 'http://7xiewl.com1.z0.glb.clouddn.com/raleway';
-$RalewayBold = 'http://7xiewl.com1.z0.glb.clouddn.com/raleway-bold';
+$CenturyGothic = "http://static.akapollo.com/century-gothic";
+$CenturyGothicBold = "http://static.akapollo.com/century-gothic-bold";
+$CenturyGothicItalic = "http://static.akapollo.com/century-gothic-italic";
+$CenturyGothicBoldItalic = "http://static.akapollo.com/century-gothic-bold-italic";
 
 @font-face
-  font-family "Raleway"
+  font-family "Century Gothic"
   font-weight normal
   font-style normal
-  src url($Raleway + '.eot?#iefix') format('embedded-opentype'),
-      url($Raleway + '.woff') format('woff'),
-      url($Raleway + '.ttf')  format('truetype'),
-      url($Raleway + '.svg') format('svg');
+  src url($CenturyGothic + '.eot?#iefix') format('embedded-opentype'),
+      url($CenturyGothic + '.woff') format('woff'),
+      url($CenturyGothic + '.ttf')  format('truetype'),
+      url($CenturyGothic + '.svg') format('svg');
 
 @font-face
-  font-family 'Raleway'
+  font-family "Century Gothic"
   font-weight bold
   font-style normal
-  src url($RalewayBold + '.eot?#iefix') format('embedded-opentype'),
-      url($RalewayBold + '.woff') format('woff'),
-      url($RalewayBold + '.ttf')  format('truetype'),
-      url($RalewayBold + '.svg') format('svg');
+  src url($CenturyGothicBold + '.eot?#iefix') format('embedded-opentype'),
+      url($CenturyGothicBold + '.woff') format('woff'),
+      url($CenturyGothicBold + '.ttf')  format('truetype'),
+      url($CenturyGothicBold + '.svg') format('svg');
+
+@font-face
+  font-family "Century Gothic"
+  font-weight normal
+  font-style italic
+  src url($CenturyGothicItalic + '.eot?#iefix') format('embedded-opentype'),
+      url($CenturyGothicItalic + '.woff') format('woff'),
+      url($CenturyGothicItalic + '.ttf')  format('truetype'),
+      url($CenturyGothicItalic + '.svg') format('svg');
+
+@font-face
+  font-family "Century Gothic"
+  font-weight bold
+  font-style italic
+  src url($CenturyGothicBoldItalic + '.eot?#iefix') format('embedded-opentype'),
+      url($CenturyGothicBoldItalic + '.woff') format('woff'),
+      url($CenturyGothicBoldItalic + '.ttf')  format('truetype'),
+      url($CenturyGothicBoldItalic + '.svg') format('svg');
