--- a/client/static/styl/tools/_variables.styl
+++ b/client/static/styl/tools/_variables.styl
@@ -1,6 +1,6 @@
 $GLOBAL-BGCOLOR = #222
 $GLOBAL-FONTCOLOR = #ddd
-$GLOBAL-FONTFAMILY = "Raleway", "Arial", sans-serif
+$GLOBAL-FONTFAMILY = "Century Gothic", "Arial", sans-sarif;
 $GLOBAL-LINKCOLOR = #ccc
 $GLOBAL-HOVERCOLOR = #222
 $GLOBAL-HOVERBGCOLOR = #ccc
@@ -8,3 +8,7 @@ $GLOBAL-BUTTON-BDCOLOR = #ccc
 $GLOBAL-BUTTON-BGCOLOR = #ccc
 $GLOBAL-BUTTON-LINKCOLOR = #ccc
 $GLOBAL-BUTTON-HOVERCOLOR = #222
+$GLOBAL-INPUT-LINK-BDCOLOR = #ccc
+$GLOBAL-INPUT-LINK-COLOR = #ccc
+$GLOBAL-INPUT-HOVER-BGCOLOR = #ccc
+$GLOBAL-INPUT-HOVER-COLOR = #222
