--- a/cloud/views/admin/partials/header.jade
+++ b/cloud/views/admin/partials/header.jade
@@ -1,9 +1,5 @@
 header
   nav
-    ul
-      li
-        a(href='/admin') Dashboard
-      li
-        a(href='/admin/upload') Upload
-      li
-        a(href='/logout') Logout
+    a(href='/admin/dashboard') DASHBOARD
+    a(href='/admin/upload') UPLOAD
+    a(href='/logout')#logout LOGOUT
