--- a/cloud/views/admin/base.jade
+++ b/cloud/views/admin/base.jade
@@ -1,8 +1,15 @@
 extends ../layout
 
+block global-head
+  link(
+    rel='stylesheet'
+    href='/css/admin.css')
+
 block header
   include partials/header
 
 block footer
 
 block global-bottom
+  script(src='//cdn.bootcss.com/jquery/2.1.3/jquery.min.js')
+  script(src='//cdn.bootcss.com/lodash.js/3.5.0/lodash.min.js')
