--- a/cloud/views/client/player.jade
+++ b/cloud/views/client/player.jade
@@ -4,7 +4,11 @@ block title
   title AKAPOLLO - PLAYER
 
 block body
-  main#player
+  main#container
+    article#player
+      section#keyboard
+
+
 
 block bottom
-  script(src='/js/player.js')
+  script(src='/js/client.js')
