--- a/client/static/styl/client/client.styl
+++ b/client/static/styl/client/client.styl
@@ -3,6 +3,16 @@ header
   z-index 1000
   text-align center
   fs: (16/16)rem
+  
+  name
+   float left
+   padding-left 20px
+   fs: (32/16)rem
+
+  nav
+    float right
+    padding-top 5px
+    padding-right 20px
 
   ul
     margin 0
@@ -24,14 +34,16 @@ footer
 
 #welcome
   vertically-align()
-  padding 6rem 0
+  margin 6rem 0
   text-align center
-  font-weight bold
-  fs: (32/16)rem
+  font-weight normal
+  fs: (24/16)rem
 
   #goto-player
-    fs: (48/16)rem
+    margin 10rem 0
+    fs: (20/16)rem
     text-align center
+    font-weight normal
 
 #player
   fixed bottom left right
