--- a/client/static/styl/tools/_base.styl
+++ b/client/static/styl/tools/_base.styl
@@ -9,7 +9,7 @@ body
   background $GLOBAL-BGCOLOR
   color $GLOBAL-FONTCOLOR
   font-family $GLOBAL-FONTFAMILY
-  fs: (16/16)rem
+  fs: (12/16)rem
   line-height 1.618
 
 a, button, input[type=button], input[type=submit]
@@ -23,17 +23,17 @@ a
   transition: color .2s ease-in-quad, background .2s ease-in-quad
   padding .2rem
   color $GLOBAL-LINKCOLOR
-  font-weight bold
+  font-weight normal
   &:hover
     background $GLOBAL-HOVERBGCOLOR
     color $GLOBAL-HOVERCOLOR
 
 button
   margin 0
-  padding .5rem
+  padding .3rem 1.2rem .3rem 1.2rem
   background none
-  border .5rem solid $GLOBAL-BUTTON-BDCOLOR
-  border-radius: .5rem
+  border .1rem solid $GLOBAL-BUTTON-BDCOLOR
+  border-radius: 0rem
   color $GLOBAL-BUTTON-LINKCOLOR
   font-family $GLOBAL-FONTFAMILY
   font-weight bold
