--- a/cloud/views/client/index.jade
+++ b/cloud/views/client/index.jade
@@ -8,11 +8,11 @@ block head
 block body
   main#container
     article#welcome
-      p Hi, Friends! Welcome to Akapollo.
+      p Welcome to Akapollo.
       p Now, It's Time to
       p
         button#goto-player(
-          onclick="location.href='/player'") Play
+          onclick="location.href='/player'") Start
 
 
 block bottom
