--- a/cloud/views/client/partials/header.jade
+++ b/cloud/views/client/partials/header.jade
@@ -1,9 +1,12 @@
 header
+  name AKAPOLLO
   nav
     ul
       li
-        a(href='/') HOMEPAGE
+        a(href='/') Homepage
       li
-        a(href='/player') PLAYER
+        a(href='/player') Player
       li
-        a(href='/about') ABOUT US
+        a(href='/setting') Setting
+      li
+        a(href='/about') About us
