--- a/client/static/styl/common/header.styl
+++ b/client/static/styl/common/header.styl
@@ -3,10 +3,10 @@ header
   z-index 1001
   color $HEADER-COLOR
   gradient: $HEADER-BGCOLOR-TOP $HEADER-BGCOLOR-BOTTOM
-
+  
+    
   nav
-    margin 10px auto
-    text-align center
+    float right
 
     ul
       li
